objects/MDCPResult__c.object
<CustomObject>
    <description>This  object is used to cast the results pulled from  MDCP</description>
    <fields>
        <fullName>Address__c</fullName>
        <label>Address</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CityRegion__c</fullName>
        <label>City Region</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>City__c</fullName>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Country__c</fullName>
        <label>Country</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DUNS__c</fullName>
        <label>DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Domestic_DUNS__c</fullName>
        <label>Domestic DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Global_DUNS__c</fullName>
        <label>Global DUNS</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>IsPartner__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Partner</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Is_Competitor__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Is Competitor</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>MDCP_Id__c</fullName>
        <label>MDCP Id</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Non_LatinName__c</fullName>
        <label>Non-Latin Name</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Of_Employee__c</fullName>
        <label># Of Employee</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_LegalName__c</fullName>
        <label>Organization LegalName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Organization_ReportingName__c</fullName>
        <label>Organization ReportingName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Postal_code__c</fullName>
        <label>Postal code</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SiteInstanceId__c</fullName>
        <label>SiteInstanceId</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>State__c</fullName>
        <label>State</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Tax_ID__c</fullName>
        <label>Tax ID</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TradeStyle_Name__c</fullName>
        <label>TradeStyle Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>isOutOfBusiness__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Out of Business</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>siteId__c</fullName>
        <label>siteId</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>tradingSiteName__c</fullName>
        <label>tradingSiteName</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <label>MDCPResult</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>MDCPResults</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>